<resources>
    <string name="app_name">GDeme</string>
    <!-- 按鈕 -->
    <string name="bun_click_name">点击测试</string>
    <!-- TextView -->
    <string name="TextDemo_name">一個TextV的簡單測試</string>
    <string name="login">登陸</string>
    <string name="register">注冊</string>

    <string name="login_name_hint">用户名/手机号</string>
    <string name="login_psw_hint">密码</string>
    <string name="login_forget_psw">忘记密码？</string>


    <string name="register_protocl_1">为使用家庭圈及服务，请您阅读并遵守《家庭圈注册协议》（以下简称“本协议”）。您一旦安装、下载或以其它方式使用本产品，即表示您同意接受本协议各项条款的约束。如果您拒绝接受本协议条款，请停止使用家庭圈及其相关服务。</string>
    <string name="register_protocl_2">家庭圈通过国际互联网络为用户提供网络服务。由于服务栏目和内容的不同，要求用户必须： (1)自行配备上网的所需设备， 包括手机及其他必备上网装置。 (2)自行负担个人上网所支付的与此服务有关的网络费用。 (3)提供详尽、准确的个人资料。 (4)不断更新注册资料，符合及时、详尽、准确的要求。 如果用户提供的资料包含有不正确的信息，家庭圈保留结束用户使用网络服务资格的权利
    </string>
    <string name="register_protocl_3">1、经本站注册系统完成注册程序即成为正式用户，可以获得本站规定用户所应享有的一切权限。2、用户只能按照注册要求使用真实手机号注册。用户有义务保证密码和帐号的安全，用户利用该密码和帐号所进行的一切活动引起的任何损失或损害，由用户自行承担全部责任，本站不承担任何责任。如用户发现帐号遭到未授权的使用或发生其他任何安全问题，应立即修改帐号密码并妥善保管，如有必要，请通知本站。因黑客行为或用户的保管疏忽导致帐号非法使用，本站</string>
</resources>
