<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/include_login_log"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/x50"
    android:orientation="vertical">

    <com.gpsi.gdeme.widget.WithDelEditText
        android:id="@+id/editText_login_name"
        android:layout_width="@dimen/x651"
        android:layout_height="@dimen/y94"
        android:background="@drawable/bg_rounded_edittext"
        android:hint="@string/login_name_hint"
        android:maxLines="1"
        android:textSize="@dimen/editTextsize_login" />

    <com.gpsi.gdeme.widget.WithDelEditText
        android:id="@+id/editText_login_psw"
        android:layout_width="@dimen/x651"
        android:layout_height="@dimen/y94"
        android:layout_marginTop="@dimen/y32"
        android:background="@drawable/bg_rounded_edittext"
        android:hint="@string/login_psw_hint"
        android:maxLines="1"
        android:textSize="@dimen/editTextsize_login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/y32"
        android:text="@string/login_forget_psw"
        android:textColor="#423f3f"
        android:textSize="26px" />

    <Button
        android:id="@+id/btn_login_send"
        android:layout_width="@dimen/x651"
        android:layout_height="@dimen/y94"
        android:background="#DC2A2A"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="登陆"
        android:textSize="36px" />

</LinearLayout>